package com.dayakar.subsidy.common.enums;

public enum ApplicationStatus {

    SUBMITTED,

    UNDER_VERIFICATION,

    VERIFIED,

    APPROVED,

    REJECTED,

    DISBURSED

}